[package]
name = "iced"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "derive"] }
proc-macro2 = "1.0"
quote = "1.0"
