[package]
name = "iced"
version = "0.1.0"
authors = ["Роман Масленников <m3angreen@gmail.com>"]
edition = "2018"

[features]
defaults = []
test-def = ["crc"]

[dependencies]
iced-macros = { path = "../iced-macros" }
crc = { version = "2.0", git = "https://github.com/mrhooray/crc-rs.git", optional = true }

[dev-dependencies]
crc = { version = "2.0", git = "https://github.com/mrhooray/crc-rs.git" }
